test/Programs/InvalidTests/dupFieldInChoice/dupFieldInChoice.fst
main : &{A: Int, A: Int}
